// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt component matches snapshot (default props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <Flex
      align="stretch"
      direction="row"
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          bar
        </Button>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          foo
        </Button>
      </FlexItem>
    </Flex>
  }
  role="alertdialog"
  width={500}
/>
`;

exports[`Prompt component matches snapshot (default props) 2`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <Flex
      align="stretch"
      direction="row"
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          bar
        </Button>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          foo
        </Button>
      </FlexItem>
    </Flex>
  }
  isOpen={true}
  role="alertdialog"
  width={500}
/>
`;

exports[`Prompt component matches snapshot (set all props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    >
      desc
    </div>
  }
  footerContent={
    <Flex
      align="stretch"
      direction="row"
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          bar
        </Button>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          iconPlacement="right"
          size="m"
          theme="blue"
        >
          foo
        </Button>
      </FlexItem>
    </Flex>
  }
  isOpen={true}
  role="alertdialog"
  title="title"
  width={500}
/>
`;
